Maj Ajout de la section H4 pour notebook_sll

--- a/kibini/notebook_sll.ipynb
+++ b/kibini/notebook_sll.ipynb
@@ -3083,10 +3083,429 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5de6070c",
+   "metadata": {},
+   "source": [
+    "# H - Action culturelle (nouvelle version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "58675bf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "75eff470",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kibini/miniconda3/envs/kibini/lib/python3.8/site-packages/openpyxl/worksheet/_reader.py:312: UserWarning: Data Validation extension is not supported and will be removed\n",
+      "  warn(msg)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ac = pd.read_excel(\"/home/kibini/AC_synthese_2023-2024.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2c875bb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Evénement</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Porteur de projet</th>\n",
+       "      <th>Animation</th>\n",
+       "      <th>Lieu Action</th>\n",
+       "      <th>Type d'action</th>\n",
+       "      <th>Nouveau Type d'action</th>\n",
+       "      <th>Partenariat</th>\n",
+       "      <th>Public</th>\n",
+       "      <th>Nombre de personnes venues</th>\n",
+       "      <th>Notes</th>\n",
+       "      <th>Jauge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-01-08</td>\n",
+       "      <td>Hervé</td>\n",
+       "      <td>Jeux</td>\n",
+       "      <td>Espace RDC</td>\n",
+       "      <td>Jeux</td>\n",
+       "      <td>Jeux</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tout public</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-01-08</td>\n",
+       "      <td>Jimmy</td>\n",
+       "      <td>Jeux vidéo</td>\n",
+       "      <td>La Criée</td>\n",
+       "      <td>Jeux</td>\n",
+       "      <td>Jeux</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Enfants</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-01-13</td>\n",
+       "      <td>Maïté</td>\n",
+       "      <td>RDV Assistance Linux</td>\n",
+       "      <td>La Criée</td>\n",
+       "      <td>Atelier</td>\n",
+       "      <td>Atelier informatique</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Adultes</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-01-14</td>\n",
+       "      <td>Laetitia C.</td>\n",
+       "      <td>Racontées des petits pouces</td>\n",
+       "      <td>Salle d'heure du conte</td>\n",
+       "      <td>Lecture/contes</td>\n",
+       "      <td>Séance de contes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Petite enfance</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>11 adultes et 14 enfants</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-01-15</td>\n",
+       "      <td>Céline</td>\n",
+       "      <td>Ciné-concert La ronde des couleurs</td>\n",
+       "      <td>La Criée</td>\n",
+       "      <td>Concert</td>\n",
+       "      <td>Concert</td>\n",
+       "      <td>Duo Fratassons</td>\n",
+       "      <td>Enfants</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>547</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2025-06-25</td>\n",
+       "      <td>Jean-Baptiste</td>\n",
+       "      <td>Jeux vidéo</td>\n",
+       "      <td>La criée</td>\n",
+       "      <td>Jeux</td>\n",
+       "      <td>Jeux-vidéo</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tout public</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>548</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2025-06-27</td>\n",
+       "      <td>Mathilde L.</td>\n",
+       "      <td>Sieste littéraire</td>\n",
+       "      <td>La criée</td>\n",
+       "      <td>Projection/diffusion</td>\n",
+       "      <td>diffusion</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Adultes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>549</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2025-06-28</td>\n",
+       "      <td>Julie</td>\n",
+       "      <td>Masque et gommage</td>\n",
+       "      <td>La criée</td>\n",
+       "      <td>Atelier</td>\n",
+       "      <td>Atelier</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tout public</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>550</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2025-06-28</td>\n",
+       "      <td>Zina</td>\n",
+       "      <td>Atelier de conversation en français</td>\n",
+       "      <td>Salle VDM</td>\n",
+       "      <td>Atelier</td>\n",
+       "      <td>Atelier</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Adultes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>551</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2025-07-05</td>\n",
+       "      <td>Mathilde L./Stéphanie</td>\n",
+       "      <td>Les Tulalus</td>\n",
+       "      <td>Salle VDM</td>\n",
+       "      <td>Club lecture</td>\n",
+       "      <td>Club lecture</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Adultes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>552 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Evénement       Date      Porteur de projet  \\\n",
+       "0         NaN 2023-01-08                  Hervé   \n",
+       "1         NaN 2023-01-08                  Jimmy   \n",
+       "2         NaN 2023-01-13                  Maïté   \n",
+       "3         NaN 2023-01-14            Laetitia C.   \n",
+       "4         NaN 2023-01-15                 Céline   \n",
+       "..        ...        ...                    ...   \n",
+       "547       NaN 2025-06-25          Jean-Baptiste   \n",
+       "548       NaN 2025-06-27            Mathilde L.   \n",
+       "549       NaN 2025-06-28                  Julie   \n",
+       "550       NaN 2025-06-28                   Zina   \n",
+       "551       NaN 2025-07-05  Mathilde L./Stéphanie   \n",
+       "\n",
+       "                               Animation             Lieu Action  \\\n",
+       "0                                   Jeux              Espace RDC   \n",
+       "1                             Jeux vidéo                La Criée   \n",
+       "2                   RDV Assistance Linux                La Criée   \n",
+       "3            Racontées des petits pouces  Salle d'heure du conte   \n",
+       "4     Ciné-concert La ronde des couleurs                La Criée   \n",
+       "..                                   ...                     ...   \n",
+       "547                           Jeux vidéo                La criée   \n",
+       "548                    Sieste littéraire                La criée   \n",
+       "549                    Masque et gommage                La criée   \n",
+       "550  Atelier de conversation en français               Salle VDM   \n",
+       "551                          Les Tulalus               Salle VDM   \n",
+       "\n",
+       "            Type d'action Nouveau Type d'action     Partenariat  \\\n",
+       "0                    Jeux                  Jeux             NaN   \n",
+       "1                    Jeux                  Jeux             NaN   \n",
+       "2                 Atelier  Atelier informatique             NaN   \n",
+       "3          Lecture/contes      Séance de contes             NaN   \n",
+       "4                 Concert               Concert  Duo Fratassons   \n",
+       "..                    ...                   ...             ...   \n",
+       "547                  Jeux            Jeux-vidéo             NaN   \n",
+       "548  Projection/diffusion             diffusion             NaN   \n",
+       "549               Atelier               Atelier             NaN   \n",
+       "550               Atelier               Atelier             NaN   \n",
+       "551          Club lecture          Club lecture             NaN   \n",
+       "\n",
+       "             Public  Nombre de personnes venues                     Notes  \\\n",
+       "0       Tout public                        25.0                       NaN   \n",
+       "1           Enfants                        45.0                       NaN   \n",
+       "2           Adultes                         2.0                       NaN   \n",
+       "3    Petite enfance                        25.0  11 adultes et 14 enfants   \n",
+       "4           Enfants                        80.0                       NaN   \n",
+       "..              ...                         ...                       ...   \n",
+       "547     Tout public                         NaN                       NaN   \n",
+       "548         Adultes                         NaN                       NaN   \n",
+       "549     Tout public                         NaN                       NaN   \n",
+       "550         Adultes                         NaN                       NaN   \n",
+       "551         Adultes                         NaN                       NaN   \n",
+       "\n",
+       "     Jauge  \n",
+       "0      NaN  \n",
+       "1      NaN  \n",
+       "2      NaN  \n",
+       "3      NaN  \n",
+       "4      NaN  \n",
+       "..     ...  \n",
+       "547    NaN  \n",
+       "548    NaN  \n",
+       "549    NaN  \n",
+       "550    NaN  \n",
+       "551    NaN  \n",
+       "\n",
+       "[552 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dico_sll_h4 = {Atelier,\n",
+    "               Atelier d'écriture,\n",
+    "               Atelier informatique,\n",
+    "               Club lecture,\n",
+    "               Concert,\n",
+    "               Conférence,\n",
+    "               Danse,\n",
+    "               Diffusion,\n",
+    "               Exposition,\n",
+    "               Festival,\n",
+    "               Jeux,\n",
+    "               Jeux-vidéo,\n",
+    "               Journée festive,\n",
+    "               Lecture,\n",
+    "               Projection,\n",
+    "               Rencontre,\n",
+    "               Salon du livre,\n",
+    "               Séance de contes,\n",
+    "               Spectacle,\n",
+    "               Vente,\n",
+    "               Autre"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65ab2aab",
+   "metadata": {},
+   "source": [
+    "## H1 - Etablissements scolaires et universitaires"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85f9ce7c",
+   "metadata": {},
+   "source": [
+    "## H2 - Equipements culturels "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eec80690",
+   "metadata": {},
+   "source": [
+    "## H3 - Structures associatives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b2422aa",
+   "metadata": {},
+   "source": [
+    "## H4 - Actions au sein de l'établissement\n",
+    "\n",
+    "|Intitulé|Oui/Non?|Champ|\n",
+    "|:---|---|---|\n",
+    "|Coopération locale|Oui|H601\n",
+    "|- Dont dont actions de coopération intercommunale (avec des bibliothèques n’appartenant pas à votre collectivité)|Oui|H610|\n",
+    "|Catalogue commun|Oui|H612|\n",
+    "|Portail documentaire commun|Non|H613|\n",
+    "|Politique documentaire commune|Non|H613\n",
+    "|Navette documentaire|Non|H614\n",
+    "|Carte unique de lecteur|Non|H615\n",
+    "|Action culturelle commune|Oui|H617\n",
+    "|Autre action de coopération intercommunal|Non|H616\n",
+    "|Coopération nationale|Oui|H604\n",
+    "|Nombre d'actions|4|H605\n",
+    "|Coopération internationale|Non|H607"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eebe92b6",
+   "metadata": {},
+   "source": [
+    "## H5 - Actions hors de l'établissement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ab11f5f",
+   "metadata": {},
+   "source": [
+    "## H6 - Actions de coopération"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84766e26",
+   "metadata": {},
+   "source": [
+    "## H7 - Actions et services à destination de publics à besoins spécifiques "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "13a5befc",
    "metadata": {},
    "source": [
-    "# H4 - Action culturelle"
+    "---\n",
+    "## H4 - Action culturelle (ANCIENNE VERSION)"
    ]
   },
   {
